<resources>
    <string name="app_name">MyEcomApplication</string>
    <string name="checkout">CHECKOUT</string>
    <string name="total_rupees">₹932</string>
    <string name="total_items">6 items</string>
    <string name="apple">Apple</string>
    <string name="rs_100_kg">₹ 100/Kg</string>
    <string name="_1_5kg">1.5Kg</string>
    <string name="kiwi">Kiwi</string>
    <string name="variant_name">₹96 - 500g</string>
    <string name="number_of_variants">2 variants</string>
    <string name="variant_items">3</string>
    <string name="name_of_product">Orange</string>
    <string name="remove">REMOVE</string>
    <string name="save">SAVE</string>
    <string name="name_of_products">Kiwi</string>
    <string name="_3">3</string>
    <string name="remove_all">REMOVE ALL</string>
    <string name="cart_summary_">CART SUMMARY</string>
    <string name="orange">orange</string>
    <string name="weight">2.5kg x 80/kg</string>
    <string name="price">Rs 200</string>
    <string name="total">TOTAL</string>
    <string name="ites">6 items</string>
    <string name="rs_932">Rs.932</string>
    <string name="delivery_info">DELIVERY INFO</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address :</string>
    <string name="address_setter">Not Set</string>
    <string name="place_order">PLACE ORDER</string>

</resources>