<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/cart_summary_"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cart_summary_"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        android:id="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/cart_summary_"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/list_of_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/CartList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>


        <FrameLayout
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/design_default_color_primary"
         android:padding="16dp">

         <TextView
             android:id="@+id/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/total"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/no_of_items"
             app:layout_constraintStart_toStartOf="parent"
             android:textColor="@color/material_on_primary_emphasis_high_type"
             style="@style/TextAppearance.MaterialComponents.Subtitle1" />

         <TextView
             android:id="@+id/no_of_items"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ites"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:textColor="@color/material_on_primary_emphasis_medium"
             style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

         <TextView
             android:id="@+id/cart_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rs_932"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/total"
             android:textColor="@color/material_on_primary_emphasis_high_type"
             style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:textStyle="bold"/>


     </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/Delivery_info"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_info"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/Delivery_info">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Contact_No"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/address"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contact_No"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/address_setter"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/address_setter"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/Contact_No"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_edit"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        app:tint="@color/design_default_color_primary"
        tools:ignore="VectorDrawableCompat"
        app:layout_constraintTop_toBottomOf="@+id/Contact_No"
        app:layout_constraintStart_toEndOf="@+id/address_setter"
        android:layout_marginLeft="8dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/place_order"
        app:layout_constraintTop_toBottomOf="@+id/address"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
