<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

     <TextView
         android:id="@+id/nameOfProduct"
         style="@style/TextAppearance.MaterialComponents.Headline6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/name_of_product"
         android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>


    <NumberPicker
        android:id="@+id/Kg_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfProduct"/>

    <NumberPicker
        android:id="@+id/g_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@+id/removeButton"
        app:layout_constraintTop_toBottomOf="@+id/nameOfProduct"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/Kg_picker"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/remove"
        app:backgroundTint="@color/darkRed"
        app:layout_constraintEnd_toStartOf="@+id/SaveButton"
        app:layout_constraintTop_toBottomOf="@+id/Kg_picker" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Kg_picker" />

 </androidx.constraintlayout.widget.ConstraintLayout>

