<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="14dp"
        app:cardElevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/apple"
                android:layout_marginStart="16dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/product_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/apple"
                app:layout_constraintLeft_toRightOf="@id/imageView"
                app:layout_constraintRight_toLeftOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceOfProduct"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/rs_100_kg"
                app:layout_constraintLeft_toRightOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/qty"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/_1_5kg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/editButton"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp" />

            <ImageButton
                android:id="@+id/incBtn"
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_marginRight="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_add"
                app:tint="@color/design_default_color_primary"
                tools:ignore="VectorDrawableCompat"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/design_default_color_primary"
                tools:ignore="VectorDrawableCompat"
                android:layout_marginEnd="24dp" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/non_zero_quantity_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="editButton,qty" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="qty,incBtn"
                tools:layout_editor_absoluteX="411dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>



</FrameLayout>