<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="14dp"
        app:cardElevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.035"
                app:srcCompat="@drawable/kiwi" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/kiwi"
                app:layout_constraintLeft_toRightOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_of_variants"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/number_of_variants"
                app:layout_constraintBottom_toBottomOf="@+id/dropBtn"
                app:layout_constraintLeft_toRightOf="@id/imageView" />

            <ImageButton
                android:id="@+id/dropBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintLeft_toRightOf="@id/number_of_variants"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drop_down"
                app:tint="@color/design_default_color_primary"
                tools:ignore="VectorDrawableCompat" />


            <TextView
                android:id="@+id/qty"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="@string/variant_items"
                app:layout_constraintBottom_toBottomOf="@+id/incBtn"
                app:layout_constraintEnd_toStartOf="@+id/incBtn"
                app:layout_constraintTop_toTopOf="@+id/incBtn" />

            <ImageButton
                android:id="@+id/incBtn"
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_marginRight="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add"
                app:tint="@color/design_default_color_primary"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/decBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@+id/qty"
                app:layout_constraintEnd_toStartOf="@+id/qty"
                app:layout_constraintTop_toTopOf="@+id/qty"
                app:srcCompat="@drawable/ic_remove"
                app:tint="@color/design_default_color_primary"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/variantChips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/barrier2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView">


            </com.google.android.material.chip.ChipGroup>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/non_zero_qty_grp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="decBtn,qty" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:barrierDirection="left"
                app:constraint_referenced_ids="decBtn,incBtn"
                tools:layout_editor_absoluteX="387dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>